k8s_configurations/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: quiztar.me
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend-service
          servicePort: 80
  - http:
      paths:
      - path: /
        backend:
          serviceName: backend-user-service
          servicePort: 8000
  tls:
  - secretName: frontend-tls
    hosts:
    - quiztar.me
    - api.quiztar.me
